--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.12.4",
@@ -23,5 +24,9 @@
 		"express",
 		"freecodecamp"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"gh-pages": "^3.1.0",
+		"nodemon": "^2.0.6"
+	}
 }
