--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"dev": "nodemon server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.0",
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"node": "15.2.1"
 	},
 	"engines": {
-		"node": "4.4.5"
+		"node": "15.2.1"
 	},
 	"repository": {
 		"type": "git",
